--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             >Web<span class="accent">Studio</span></a
           >
           <ul class="header-menu">
-            <li><a class="menu-link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="menu-link menu-link-accent" href="./index.html"
+                >Studio</a
+              >
+            </li>
             <li><a class="menu-link" href="">Portfolio</a></li>
             <li><a class="menu-link" href="">Contacts</a></li>
           </ul>
