--- a/index.html
+++ b/index.html
@@ -124,27 +124,34 @@
               <div class="applications-inblok">
                 <h3 class="applications">Mark Guerrero</h3>
                 <p class="applications-content">Product Designer</p>
-
                 <ul class="team-link-item">
-                  <li>
-                    <svg class="icon-item" width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
+                  <li class="icon-item">
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <svg class="icon-item" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                  <li class="icon-item">
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <svg class="icon-item" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                  <li class="icon-item">
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <svg class="icon-item" width="40" height="40">
-                      <use href="./images/icons.svg#icon-link"></use>
-                    </svg>
+                  <li class="icon-item">
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -156,24 +163,32 @@
                 <p class="applications-content">Frontend Developer</p>
                 <ul class="applications-blok">
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-link"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -185,24 +200,32 @@
                 <p class="applications-content">Marketing</p>
                 <ul class="team-link-item">
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-link"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -214,24 +237,32 @@
                 <p class="applications-content">UI Designer</p>
                 <ul class="team-link-item">
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-insta"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-insta"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-item">
-                    <svg width="40" height="40">
-                      <use href="./images/icons.svg#icon-link"></use>
-                    </svg>
+                    <a class="our-team-link" href="">
+                      <svg class="icon-box" width="16" height="16">
+                        <use href="./images/icons.svg#icon-link"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -244,15 +275,19 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="cards">
             <li class="card-set">
-              <img src="./images/banking.jpg" width="360" alt="banking" />
               <div class="card-description">
+                <img src="./images/banking.jpg" width="360" alt="banking" />
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
               </div>
             </li>
             <li class="card-set">
-              <img src="./images/Cash.jpg" width="360" alt="Cashless-payment" />
               <div class="card-description">
+                <img
+                  src="./images/Cash.jpg"
+                  width="360"
+                  alt="Cashless-payment"
+                />
                 <h3 class="subtitle">Cashless Payment</h3>
                 <p class="subtitle-content">Marketing</p>
                 <svg width="16" height="16">
@@ -306,7 +341,7 @@
     </main>
     <footer class="basement">
       <div class="container footer-container">
-        <div class>
+        <div class="footer-logo">
           <a class="logo logo-footer" href="./index.html"
             >Web<span class="accent-two">Studio</span></a
           >
@@ -316,27 +351,37 @@
           </p>
         </div>
         <div>
-          <p>Social media</p>
+          <p class="footer-social">Social media</p>
           <ul class="footer-link">
-            <li>
-              <svg width="40" height="40">
-                <use href="./images/icons.svg#icon-insta"></use>
-              </svg>
+            <li class="footer-social-link">
+              <a class="icon-link" href="">
+                <svg class="icon-into" width="24" height="24">
+                  <use href="./images/icons.svg#icon-insta"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg width="40" height="40">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
+
+            <li class="footer-social-link">
+              <a class="icon-link" href="">
+                <svg class="icon-into" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg width="40" height="40">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
+            <li class="footer-social-link">
+              <a class="icon-link" href="">
+                <svg class="icon-into" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg width="40" height="40">
-                <use href="./images/icons.svg#icon-link"></use>
-              </svg>
+
+            <li class="footer-social-link">
+              <a class="icon-link" href="">
+                <svg class="icon-into" width="24" height="24">
+                  <use href="./images/icons.svg#icon-link"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
