--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
                 <img src="./images/banking.jpg" width="360" alt="banking" />
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
             </li>
             <li class="card-set">
@@ -290,49 +295,74 @@
                 />
                 <h3 class="subtitle">Cashless Payment</h3>
                 <p class="subtitle-content">Marketing</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <svg width="16" height="16">
                   <use href="./images/icons.svg#icon-Finger"></use>
                 </svg>
               </div>
             </li>
             <li class="card-set">
-              <img
-                src="./images/Meditation.jpg"
-                width="360"
-                alt="meditation-app"
-              />
               <div class="card-description">
+                <img
+                  src="./images/Meditation.jpg"
+                  width="360"
+                  alt="meditation-app"
+                />
                 <h3 class="subtitle">Meditation App</h3>
                 <p class="subtitle-content">App</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
             </li>
             <li class="card-set">
-              <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
               <div class="card-description">
+                <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
                 <h3 class="subtitle">Taxi Service</h3>
                 <p class="subtitle-content">Marketing</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
             </li>
             <li class="card-set">
-              <img
-                src="./images/Illustrations.jpg"
-                width="360"
-                alt="illustrations-screen"
-              />
               <div class="card-description">
+                <img
+                  src="./images/Illustrations.jpg"
+                  width="360"
+                  alt="illustrations-screen"
+                />
                 <h3 class="subtitle">Screen Illustrations</h3>
                 <p class="subtitle-content">Design</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
             </li>
             <li class="card-set">
-              <img
-                src="./images/Courses.jpg"
-                width="360"
-                alt="online-courses"
-              />
               <div class="card-description">
+                <img
+                  src="./images/Courses.jpg"
+                  width="360"
+                  alt="online-courses"
+                />
                 <h3 class="subtitle">Online Courses</h3>
                 <p class="subtitle-content">Marketing</p>
+                <p class="new-pr">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
             </li>
           </ul>
@@ -360,7 +390,6 @@
                 </svg>
               </a>
             </li>
-
             <li class="footer-social-link">
               <a class="icon-link" href="">
                 <svg class="icon-into" width="24" height="24">
@@ -375,7 +404,6 @@
                 </svg>
               </a>
             </li>
-
             <li class="footer-social-link">
               <a class="icon-link" href="">
                 <svg class="icon-into" width="24" height="24">
