--- a/index.html
+++ b/index.html
@@ -279,7 +279,9 @@
                 <img src="./images/banking.jpg" width="360" alt="banking" />
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
-                <p class="new-pr">
+              </div>
+              <div class="new-pr">
+                <p>
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
