--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <ul class="team-link-item">
                   <li class="icon-item">
                     <a class="our-team-link" href="">
-                      <svg class="icon-box" width="16" height="16">
+                      <svg class="icon-box" width="24" height="24">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
@@ -161,7 +161,7 @@
               <div class="applications-inblok">
                 <h3 class="applications">Tom Ford</h3>
                 <p class="applications-content">Frontend Developer</p>
-                <ul class="applications-blok">
+                <ul class="team-link-item">
                   <li class="icon-item">
                     <a class="our-team-link" href="">
                       <svg class="icon-box" width="16" height="16">
@@ -276,16 +276,17 @@
           <ul class="cards">
             <li class="card-set">
               <div class="card-description">
-                <img src="./images/banking.jpg" width="360" alt="banking" />
+                <div class="img-overfly">
+                  <img src="./images/banking.jpg" width="360" alt="banking" />
+
+                  <p class="text-over">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
-              </div>
-              <div class="new-pr">
-                <p>
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
             <li class="card-set">
