--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <main>
       <section class="hero-section section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="button-title" type="button">Order Service</button>
         </div>
@@ -127,7 +127,7 @@
                 <ul class="team-link-item">
                   <li class="icon-item">
                     <a class="our-team-link" href="">
-                      <svg class="icon-box" width="24" height="24">
+                      <svg class="icon-box" width="16" height="16">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
@@ -278,12 +278,13 @@
               <div class="card-description">
                 <div class="img-overfly">
                   <img src="./images/banking.jpg" width="360" alt="banking" />
-
-                  <p class="text-over">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
@@ -291,18 +292,22 @@
             </li>
             <li class="card-set">
               <div class="card-description">
-                <img
-                  src="./images/Cash.jpg"
-                  width="360"
-                  alt="Cashless-payment"
-                />
+                <div class="img-overfly">
+                  <img
+                    src="./images/Cash.jpg"
+                    width="360"
+                    alt="Cashless-payment"
+                  />
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <h3 class="subtitle">Cashless Payment</h3>
                 <p class="subtitle-content">Marketing</p>
-                <p class="new-pr">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
                 <svg width="16" height="16">
                   <use href="./images/icons.svg#icon-Finger"></use>
                 </svg>
@@ -310,62 +315,78 @@
             </li>
             <li class="card-set">
               <div class="card-description">
-                <img
-                  src="./images/Meditation.jpg"
-                  width="360"
-                  alt="meditation-app"
-                />
+                <div class="img-overfly">
+                  <img
+                    src="./images/Meditation.jpg"
+                    width="360"
+                    alt="meditation-app"
+                  />
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <h3 class="subtitle">Meditation App</h3>
                 <p class="subtitle-content">App</p>
-                <p class="new-pr">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
             <li class="card-set">
               <div class="card-description">
-                <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
+                <div class="img-overfly">
+                  <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <h3 class="subtitle">Taxi Service</h3>
                 <p class="subtitle-content">Marketing</p>
-                <p class="new-pr">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
             <li class="card-set">
               <div class="card-description">
-                <img
-                  src="./images/Illustrations.jpg"
-                  width="360"
-                  alt="illustrations-screen"
-                />
+                <div class="img-overfly">
+                  <img
+                    src="./images/Illustrations.jpg"
+                    width="360"
+                    alt="illustrations-screen"
+                  />
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <h3 class="subtitle">Screen Illustrations</h3>
                 <p class="subtitle-content">Design</p>
-                <p class="new-pr">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
             <li class="card-set">
               <div class="card-description">
-                <img
-                  src="./images/Courses.jpg"
-                  width="360"
-                  alt="online-courses"
-                />
+                <div class="img-overfly">
+                  <img
+                    src="./images/Courses.jpg"
+                    width="360"
+                    alt="online-courses"
+                  />
+                  <div class="overlay">
+                    <p class="text-over">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <h3 class="subtitle">Online Courses</h3>
                 <p class="subtitle-content">Marketing</p>
-                <p class="new-pr">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
               </div>
             </li>
           </ul>
