--- a/index.html
+++ b/index.html
@@ -275,116 +275,113 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="cards">
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img src="./images/banking.jpg" width="360" alt="banking" />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img src="./images/banking.jpg" width="360" alt="banking" />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Banking App</h3>
                 <p class="subtitle-content">App</p>
               </div>
             </li>
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img
-                    src="./images/Cash.jpg"
-                    width="360"
-                    alt="Cashless-payment"
-                  />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img
+                  src="./images/Cash.jpg"
+                  width="360"
+                  alt="Cashless-payment"
+                />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Cashless Payment</h3>
                 <p class="subtitle-content">Marketing</p>
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#icon-Finger"></use>
-                </svg>
               </div>
             </li>
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img
-                    src="./images/Meditation.jpg"
-                    width="360"
-                    alt="meditation-app"
-                  />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img
+                  src="./images/Meditation.jpg"
+                  width="360"
+                  alt="meditation-app"
+                />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Meditation App</h3>
                 <p class="subtitle-content">App</p>
               </div>
             </li>
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Taxi Service</h3>
                 <p class="subtitle-content">Marketing</p>
               </div>
             </li>
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img
-                    src="./images/Illustrations.jpg"
-                    width="360"
-                    alt="illustrations-screen"
-                  />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img
+                  src="./images/Illustrations.jpg"
+                  width="360"
+                  alt="illustrations-screen"
+                />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Screen Illustrations</h3>
                 <p class="subtitle-content">Design</p>
               </div>
             </li>
             <li class="card-set">
-              <div class="card-description">
-                <div class="img-overfly">
-                  <img
-                    src="./images/Courses.jpg"
-                    width="360"
-                    alt="online-courses"
-                  />
-                  <div class="overlay">
-                    <p class="text-over">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+              <div class="card-content">
+                <img
+                  src="./images/Courses.jpg"
+                  width="360"
+                  alt="online-courses"
+                />
+                <div class="card-overlay">
+                  <p class="content-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
+              </div>
+              <div class="card-description">
                 <h3 class="subtitle">Online Courses</h3>
                 <p class="subtitle-content">Marketing</p>
               </div>
