--- a/index.html
+++ b/index.html
@@ -277,13 +277,12 @@
             <li class="card-set">
               <div class="card-content">
                 <img src="./images/banking.jpg" width="360" alt="banking" />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Banking App</h3>
@@ -297,13 +296,12 @@
                   width="360"
                   alt="Cashless-payment"
                 />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Cashless Payment</h3>
@@ -317,13 +315,12 @@
                   width="360"
                   alt="meditation-app"
                 />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Meditation App</h3>
@@ -333,13 +330,12 @@
             <li class="card-set">
               <div class="card-content">
                 <img src="./images/Taxi.jpg" width="360" alt="taxi-service" />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Taxi Service</h3>
@@ -353,13 +349,12 @@
                   width="360"
                   alt="illustrations-screen"
                 />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Screen Illustrations</h3>
@@ -373,13 +368,12 @@
                   width="360"
                   alt="online-courses"
                 />
-                <div class="card-overlay">
-                  <p class="content-overlay">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="content-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card-description">
                 <h3 class="subtitle">Online Courses</h3>
