--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
     </main>
     <footer class="basement">
       <div class="container footer-container">
-        <div class="footer-logo">
-          <a class="logo logo-footer" href="./index.html"
+        <div class="one-block">
+          <a class="logo-footer" href="./index.html"
             >Web<span class="accent-two">Studio</span></a
           >
           <p class="description-footer">
@@ -395,7 +395,7 @@
             digital marketing &#38; growth solutions.
           </p>
         </div>
-        <div>
+        <div class="icon-footer">
           <p class="footer-social">Social media</p>
           <ul class="footer-link">
             <li class="footer-social-link">
